WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124607
Web Speech API crashes onboundary event handling with reload
https://bugs.webkit.org/show_bug.cgi?id=124607
Summary
Web Speech API crashes onboundary event handling with reload
chris fleizach
Reported
2013-11-19 14:38:50 PST
The Web Speech API crashes Safari when given a paragraph of text. It also display inconsistent behavior with onboundary call backs.
Attachments
patch
(1.86 KB, patch)
2013-11-19 14:41 PST
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-11-19 14:39:09 PST
<
rdar://problem/15507781
>
chris fleizach
Comment 2
2013-11-19 14:41:13 PST
Created
attachment 217334
[details]
patch
chris fleizach
Comment 3
2013-11-19 14:44:02 PST
Wrong radar: it should be <
rdar://15490503
>
Tim Horton
Comment 4
2013-11-19 14:44:17 PST
Comment on
attachment 217334
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217334&action=review
> Source/WebCore/platform/mac/PlatformSpeechSynthesizerMac.mm:170 > +- (void)tearDown
maybe -clear? We use that name in a bunch of other places.
Tim Horton
Comment 5
2013-11-19 14:44:40 PST
Alternatively, invalidate.
chris fleizach
Comment 6
2013-11-19 14:45:39 PST
(In reply to
comment #4
)
> (From update of
attachment 217334
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=217334&action=review
> > > Source/WebCore/platform/mac/PlatformSpeechSynthesizerMac.mm:170 > > +- (void)tearDown > > maybe -clear? We use that name in a bunch of other places.
Will do
chris fleizach
Comment 7
2013-11-19 14:48:01 PST
http://trac.webkit.org/changeset/159523
went with invalidate
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug